[package]
name = "html_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.13.0"
reqwest = { version = "0.11.13", features = ["cookies"] }
tokio = { version = "1.21.2", features = ["full"] }
